--- a/index.html
+++ b/index.html
@@ -95,12 +95,7 @@
         <h1>My E-Commerce Store</h1>
     </header>
 
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">Shop</a>
-        <a href="#">Cart</a>
-        <a href="#">Contact</a>
-    </nav>
+    <nav>Navbar coming soon</nav>
 
     <div class="container">
         <h2>Products</h2>
